--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
   },
   "devDependencies": {
     "@types/chai": "4.1.7",
+    "@types/figlet": "1.2.0",
     "@types/inquirer": "0.0.43",
     "@types/mocha": "5.2.5",
     "@types/node": "10.12.12",
     "@types/ora": "3.0.0",
-    "@types/figlet": "1.2.0",
     "awesome-typescript-loader": "5.2.1",
     "chai": "4.2.0",
     "mocha": "5.2.0",
     "nyc": "13.1.0",
+    "shebang-loader": "0.0.1",
     "ts-loader": "5.3.2",
     "ts-node": "7.0.1",
     "tsconfig-paths": "3.7.0",
